--- a/src/assets/styles/components/button.css
+++ b/src/assets/styles/components/button.css
@@ -13,6 +13,15 @@
     letter-spacing: 1px;
 }
 
+.button--small {
+    min-width: 124px;
+    height: 36px;
+    padding-left: 16px;
+    padding-right: 16px;
+    font-size: 10px;
+    letter-spacing: 0.6px;
+}
+
 .button--half {
     width: calc(50% - 12px);
 }
