--- a/src/assets/styles/components/grid.css
+++ b/src/assets/styles/components/grid.css
@@ -16,7 +16,7 @@
 }
 
 .grid--account {
-    grid-template-rows: auto auto 1fr auto;
+    grid-template-rows: auto auto auto 1fr;
 }
 
 .grid--operation {
