--- a/src/assets/styles/components/icon.css
+++ b/src/assets/styles/components/icon.css
@@ -50,6 +50,10 @@
     background-image: url("/src/assets/images/police.svg");
 }
 
+.icon--bank {
+    background-image: url("/src/assets/images/bank.svg");
+}
+
 .icon--button {
     cursor: pointer;
 }
