--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -14,7 +14,7 @@
     --color-light-divider-alt: #dee2e6;
     --color-light-spinner-track: #dee2e6;
 
-    --color-red: #FF6B6B;
+    --color-red: #ff6b6b;
     --color-light-red: #FFC9C9;
     --color-green: #51cf66;
     --color-beach: #FFF3BF;
