feat: rework lists with templates

--- a/src/assets/styles/components/log.css
+++ b/src/assets/styles/components/log.css
@@ -42,7 +42,7 @@
     margin-bottom: 5px;
 }
 
-.log__entity {
+.log__type {
     box-sizing: border-box;
     display: block;
     font-size: 16px;
