--- a/src/assets/styles/components/button.css
+++ b/src/assets/styles/components/button.css
@@ -14,7 +14,7 @@
 }
 
 .button--small {
-    min-width: 124px;
+    min-width: auto;
     height: 36px;
     padding-left: 16px;
     padding-right: 16px;
