--- a/src/assets/styles/components/paper.css
+++ b/src/assets/styles/components/paper.css
@@ -21,7 +21,7 @@
     width: 100%;
     height: 100%;
     overflow-y: auto;
-    padding: 0 16px;
+    padding: 8px 16px;
 }
 
 .paper__frame::-webkit-scrollbar {
@@ -34,6 +34,13 @@
 
 .paper__frame::-webkit-scrollbar-track {
     border-left: 1px solid var(--color-light-divider);
+}
+
+.paper__table {
+    box-sizing: border-box;
+    width: 100%;
+    height: auto;
+    border-collapse: collapse;
 }
 
 .paper__button {
