--- a/src/assets/styles/components/balance.css
+++ b/src/assets/styles/components/balance.css
@@ -20,23 +20,20 @@
     font-weight: 700;
     letter-spacing: 0.8px;
     color: transparent;
+    text-shadow: 0 0 12px var(--color-green);
     text-transform: uppercase;
     line-height: 24px;
     margin: 0;
     cursor: default;
 }
 
-.balance__value--positive {
-    text-shadow: 0 0 8px var(--color-green);
-}
-
-.balance__value--positive:hover {
+.balance__value:hover {
     color: var(--color-green);
     text-shadow: none;
 }
 
 .balance__value--negative {
-    text-shadow: 0 0 8px var(--color-red);
+    text-shadow: 0 0 12px var(--color-red);
 }
 
 .balance__value--negative:hover {
