--- a/src/assets/styles/components/icon.css
+++ b/src/assets/styles/components/icon.css
@@ -10,6 +10,10 @@
     border: 1px solid var(--color-light-divider);
 }
 
+.icon--hidden {
+    display: none;
+}
+
 .icon--filled {
     background-color: var(--color-red);
     border: none;
