--- a/src/assets/styles/states.css
+++ b/src/assets/styles/states.css
@@ -1,23 +1,23 @@
-#tab-selector-1:checked ~ .bar > .bar__section > .tab-list > #tab-1 {border-bottom: 4px solid var(--color-red);}
-#tab-selector-2:checked ~ .bar > .bar__section > .tab-list > #tab-2 {border-bottom: 4px solid var(--color-red);}
-#tab-selector-3:checked ~ .bar > .bar__section > .tab-list > #tab-3 {border-bottom: 4px solid var(--color-red);}
-#tab-selector-4:checked ~ .bar > .bar__section > .tab-list > #tab-4 {border-bottom: 4px solid var(--color-red);}
+#tab-selector-account:checked ~ .bar #tab-account {border-bottom: 4px solid var(--color-red);}
+#tab-selector-operation:checked ~ .bar #tab-operation {border-bottom: 4px solid var(--color-red);}
+#tab-selector-transfer:checked ~ .bar #tab-transfer {border-bottom: 4px solid var(--color-red);}
+#tab-selector-enterprise:checked ~ .bar #tab-enterprise {border-bottom: 4px solid var(--color-red);}
 
-#tab-selector-1:checked ~ .bar > .bar__section > .tab-list > #tab-1 > .tab-list__label {color: var(--color-light-text);}
-#tab-selector-2:checked ~ .bar > .bar__section > .tab-list > #tab-2 > .tab-list__label {color: var(--color-light-text);}
-#tab-selector-3:checked ~ .bar > .bar__section > .tab-list > #tab-3 > .tab-list__label {color: var(--color-light-text);}
-#tab-selector-4:checked ~ .bar > .bar__section > .tab-list > #tab-4 > .tab-list__label {color: var(--color-light-text);}
+#tab-selector-account:checked ~ .bar #tab-account > .tab-list__label {color: var(--color-light-text);}
+#tab-selector-operation:checked ~ .bar #tab-operation > .tab-list__label {color: var(--color-light-text);}
+#tab-selector-transfer:checked ~ .bar #tab-transfer > .tab-list__label {color: var(--color-light-text);}
+#tab-selector-enterprise:checked ~ .bar #tab-enterprise > .tab-list__label {color: var(--color-light-text);}
 
-.dark #tab-selector-1:checked ~ .bar > .bar__section > .tab-list > #tab-1 > .tab-list__label {color: var(--color-dark-text);}
-.dark #tab-selector-2:checked ~ .bar > .bar__section > .tab-list > #tab-2 > .tab-list__label {color: var(--color-dark-text);}
-.dark #tab-selector-3:checked ~ .bar > .bar__section > .tab-list > #tab-3 > .tab-list__label {color: var(--color-dark-text);}
-.dark #tab-selector-4:checked ~ .bar > .bar__section > .tab-list > #tab-4 > .tab-list__label {color: var(--color-dark-text);}
+.dark #tab-selector-account:checked ~ .bar #tab-account > .tab-list__label {color: var(--color-dark-text);}
+.dark #tab-selector-operation:checked ~ .bar #tab-operation > .tab-list__label {color: var(--color-dark-text);}
+.dark #tab-selector-transfer:checked ~ .bar #tab-transfer > .tab-list__label {color: var(--color-dark-text);}
+.dark #tab-selector-enterprise:checked ~ .bar #tab-enterprise > .tab-list__label {color: var(--color-dark-text);}
 
-#tab-selector-1:checked ~ #tab-content-1 {display: block;}
-#tab-selector-2:checked ~ #tab-content-2 {display: block;}
-#tab-selector-3:checked ~ #tab-content-3 {display: block;}
-#tab-selector-4:checked ~ #tab-content-4 {display: block;}
-#tab-selector-5:checked ~ #tab-content-5 {display: block;}
+#tab-selector-account:checked ~ #tab-content-account {display: block;}
+#tab-selector-operation:checked ~ #tab-content-operation {display: block;}
+#tab-selector-transfer:checked ~ #tab-content-transfer {display: block;}
+#tab-selector-enterprise:checked ~ #tab-content-enterprise {display: block;}
+#tab-selector-offshore:checked ~ #tab-content-offshore {display: block;}
 
 .app--loading > .app__spinner {
     display: block;
