--- a/src/assets/styles/components/paper.css
+++ b/src/assets/styles/components/paper.css
@@ -21,7 +21,8 @@
     width: 100%;
     height: 100%;
     overflow-y: auto;
-    padding: 8px 16px;
+    padding-left: 16px;
+    padding-right: 16px;
 }
 
 .paper__frame::-webkit-scrollbar {
