--- a/src/assets/styles/components/grid.css
+++ b/src/assets/styles/components/grid.css
@@ -65,3 +65,8 @@
 .grid__section--row-span-4 {
     grid-row: span 4 / span 4;
 }
+
+.dark .grid__section--with-border {
+    padding-bottom: 24px;
+    border-bottom: 1px solid var(--color-dark-border-on-bg);
+}
