--- a/src/assets/styles/components/icon.css
+++ b/src/assets/styles/components/icon.css
@@ -3,20 +3,23 @@
     display: block;
     width: 48px;
     height: 48px;
-    background-color: var(--color-light-bg);
+    background-color: transparent;
     background-repeat: no-repeat;
     background-position: center;
     background-size: 24px;
-    border: 1px solid var(--color-light-divider);
+    border: none;
+}
+
+.icon--primary {
+    background-color: var(--color-red);
+}
+
+.icon--secondary {
+    background-color: var(--color-dark-bg);
 }
 
 .icon--hidden {
     display: none;
-}
-
-.icon--filled {
-    background-color: var(--color-red);
-    border: none;
 }
 
 .icon--small {
@@ -25,9 +28,7 @@
     background-size: 16px;
 }
 
-.icon--no-bg {
-    background-color: transparent;
-    border: none;
+.icon--clickable {
     cursor: pointer;
 }
 
@@ -59,17 +60,6 @@
     background-image: url("/src/assets/images/bank.svg");
 }
 
-.icon--button {
-    cursor: pointer;
+.dark .icon--secondary {
+    background-color: var(--color-dark-icon-bg);
 }
-
-.icon--button:hover {
-    background-color: #FFE3E3;
-    border: 1px solid #FFC9C9;
-}
-
-.icon--filled:hover {
-    background-color: #FF8787;
-    border: none;
-}
-
