--- a/src/assets/styles/components/paper.css
+++ b/src/assets/styles/components/paper.css
@@ -4,12 +4,10 @@
     width: 100%;
     height: 100%;
     background-color: var(--color-light-fg);
-    border: 1px solid var(--color-light-divider);
 }
 
 .dark .paper {
     background-color: var(--color-dark-fg);
-    border: 1px solid var(--color-dark-divider);
 }
 
 .paper__frame {
@@ -30,11 +28,11 @@
 }
 
 .paper__frame::-webkit-scrollbar-thumb {
-    background-color: #dee2e6;
+    background-color: var(--color-light-scrollbar-thumb);
 }
 
 .paper__frame::-webkit-scrollbar-track {
-    border-left: 1px solid var(--color-light-divider);
+    background-color: transparent;
 }
 
 .paper__table {
@@ -52,4 +50,8 @@
     right: 16px;
     width: auto;
     height: auto;
+}
+
+.dark .paper__frame::-webkit-scrollbar-thumb {
+    background-color: var(--color-dark-scrollbar-thumb);
 }
