--- a/src/assets/styles/components/screen.css
+++ b/src/assets/styles/components/screen.css
@@ -4,4 +4,9 @@
     width: 100%;
     min-height: 100vh;
     margin: 0;
+    background-color: var(--color-light-fg);
+}
+
+.dark .screen {
+    background-color: #1A1B1E;
 }
