--- a/src/assets/styles/components/swift.css
+++ b/src/assets/styles/components/swift.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     width: 100%;
     height: auto;
-    border-bottom: 1px solid var(--color-light-divider);
+    border-bottom: 1px solid var(--color-light-border);
 }
 
 .swift--clickable {
@@ -65,4 +65,20 @@
     top: 0;
     left: -8px;
     transform: translateX(-100%);
+}
+
+.dark .swift {
+    border-bottom: 1px solid var(--color-dark-border);
+}
+
+.dark .swift:last-child {
+    border: none;
+}
+
+.dark .swift__name {
+    color: var(--color-dark-text);
+}
+
+.dark .swift__code {
+    color: var(--color-dark-text-alt);
 }
