--- a/src/assets/styles/components/toggle-button.css
+++ b/src/assets/styles/components/toggle-button.css
@@ -31,8 +31,12 @@
     color: var(--color-light-text-alt);
 }
 
-.dark .toggle-button__icon {
-    color: var(--color-dark-text-alt);
+.toggle-button__input:not(:checked) ~ .toggle-button__icon--sun {
+    color: var(--color-dark-toggle-button-icon);
+}
+
+.toggle-button__input:checked ~ .toggle-button__icon--moon {
+    color: var(--color-dark-toggle-button-icon);
 }
 
 .toggle-button__track {
@@ -43,11 +47,7 @@
     margin-left: 12px;
     margin-right: 12px;
     border-radius: 9999px;
-    background-color: var(--color-light-spinner-track);
-}
-
-.dark .toggle-button__track {
-    background-color: var(--color-dark-spinner-track);
+    background-color: var(--color-light-toggle-button-track);
 }
 
 .toggle-button__handle {
@@ -57,9 +57,21 @@
     width: 12px;
     height: 12px;
     border-radius: 9999px;
-    background-color: var(--color-red);
+    background-color: var(--color-light-toggle-button-thumb);
 }
 
 .toggle-button__input:checked ~ .toggle-button__track > .toggle-button__handle {
     transform: translateX(20px);
+}
+
+.dark .toggle-button__icon {
+    color: var(--color-dark-text-alt);
+}
+
+.dark .toggle-button__track {
+    background-color: var(--color-dark-toggle-button-track);
+}
+
+.dark .toggle-button__handle {
+    background-color: var(--color-dark-toggle-button-thumb);
 }
