--- a/src/assets/styles/components/grid.css
+++ b/src/assets/styles/components/grid.css
@@ -43,7 +43,7 @@
 
 .grid__section--with-border {
     padding-bottom: 24px;
-    border-bottom: 1px solid var(--color-light-divider-alt);
+    border-bottom: 1px solid var(--color-light-border);
 }
 
 .grid__section--align-bottom {
@@ -68,5 +68,5 @@
 
 .dark .grid__section--with-border {
     padding-bottom: 24px;
-    border-bottom: 1px solid var(--color-dark-border-on-bg);
+    border-bottom: 1px solid var(--color-dark-border);
 }
