--- a/src/assets/styles/components/icon.css
+++ b/src/assets/styles/components/icon.css
@@ -18,6 +18,10 @@
     background-color: var(--color-dark-bg);
 }
 
+.icon--negative-mr {
+    margin-right: -12px;
+}
+
 .icon--hidden {
     display: none;
 }
@@ -62,4 +66,8 @@
 
 .dark .icon--secondary {
     background-color: var(--color-dark-icon-bg);
+}
+
+.dark .icon--primary {
+    background-color: var(--color-dark-maze);
 }
