--- a/src/assets/styles/components/bar.css
+++ b/src/assets/styles/components/bar.css
@@ -44,7 +44,15 @@
     pointer-events: none;
 }
 
+.bar__logo--maze {
+    color: var(--color-light-maze);
+}
+
 .dark .bar {
     background-color: var(--color-dark-fg);
     border-bottom: 0.1px solid var(--color-dark-divider);
+}
+
+.dark .bar__logo--maze {
+    color: var(--color-dark-maze);
 }
