--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -35,7 +35,7 @@
 
     --color-dark-up: #0ca678;
     --color-dark-down: #e64980;
-    --color-dark-fleeca: ;
+    --color-dark-fleeca: #37b24d;
     --color-dark-maze: #c92a2a;
 
     --color-red: #ff6b6b;
