--- a/src/assets/styles/states.css
+++ b/src/assets/styles/states.css
@@ -1,12 +1,22 @@
-#tab-selector-account:checked ~ .bar #tab-account {border-bottom: 4px solid var(--color-light-maze);}
-#tab-selector-operation:checked ~ .bar #tab-operation {border-bottom: 4px solid var(--color-light-maze);}
-#tab-selector-transfer:checked ~ .bar #tab-transfer {border-bottom: 4px solid var(--color-light-maze);}
-#tab-selector-enterprise:checked ~ .bar #tab-enterprise {border-bottom: 4px solid var(--color-light-maze);}
+.maze #tab-selector-account:checked ~ .bar #tab-account {border-bottom: 4px solid var(--color-light-maze);}
+.maze #tab-selector-operation:checked ~ .bar #tab-operation {border-bottom: 4px solid var(--color-light-maze);}
+.maze #tab-selector-transfer:checked ~ .bar #tab-transfer {border-bottom: 4px solid var(--color-light-maze);}
+.maze #tab-selector-enterprise:checked ~ .bar #tab-enterprise {border-bottom: 4px solid var(--color-light-maze);}
 
-.dark #tab-selector-account:checked ~ .bar #tab-account {border-bottom: 4px solid var(--color-dark-maze);}
-.dark #tab-selector-operation:checked ~ .bar #tab-operation {border-bottom: 4px solid var(--color-dark-maze);}
-.dark #tab-selector-transfer:checked ~ .bar #tab-transfer {border-bottom: 4px solid var(--color-dark-maze);}
-.dark #tab-selector-enterprise:checked ~ .bar #tab-enterprise {border-bottom: 4px solid var(--color-dark-maze);}
+.fleeca #tab-selector-account:checked ~ .bar #tab-account {border-bottom: 4px solid var(--color-light-fleeca);}
+.fleeca #tab-selector-operation:checked ~ .bar #tab-operation {border-bottom: 4px solid var(--color-light-fleeca);}
+.fleeca #tab-selector-transfer:checked ~ .bar #tab-transfer {border-bottom: 4px solid var(--color-light-fleeca);}
+.fleeca #tab-selector-enterprise:checked ~ .bar #tab-enterprise {border-bottom: 4px solid var(--color-light-fleeca);}
+
+.maze.dark #tab-selector-account:checked ~ .bar #tab-account {border-bottom: 4px solid var(--color-dark-maze);}
+.maze.dark #tab-selector-operation:checked ~ .bar #tab-operation {border-bottom: 4px solid var(--color-dark-maze);}
+.maze.dark #tab-selector-transfer:checked ~ .bar #tab-transfer {border-bottom: 4px solid var(--color-dark-maze);}
+.maze.dark #tab-selector-enterprise:checked ~ .bar #tab-enterprise {border-bottom: 4px solid var(--color-dark-maze);}
+
+.fleeca.dark #tab-selector-account:checked ~ .bar #tab-account {border-bottom: 4px solid var(--color-dark-fleeca);}
+.fleeca.dark #tab-selector-operation:checked ~ .bar #tab-operation {border-bottom: 4px solid var(--color-dark-fleeca);}
+.fleeca.dark #tab-selector-transfer:checked ~ .bar #tab-transfer {border-bottom: 4px solid var(--color-dark-fleeca);}
+.fleeca.dark #tab-selector-enterprise:checked ~ .bar #tab-enterprise {border-bottom: 4px solid var(--color-dark-fleeca);}
 
 #tab-selector-account:checked ~ .bar #tab-account > .tab-list__label {color: var(--color-light-text);}
 #tab-selector-operation:checked ~ .bar #tab-operation > .tab-list__label {color: var(--color-light-text);}
