--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -13,7 +13,8 @@
     --color-dark-icon-bg-filled: ;
     --color-dark-toggle-button-track: #383D43;
     --color-dark-toggle-button-thumb: #CED4DA;
-    --color-dark-toggle-button-icon: #fcc419;
+    --color-dark-toggle-button-icon: #495057;
+    --color-dark-toggle-button-icon-active: #fcc419;
 
     --color-light-screen: #ffffff;
     --color-light-bg: #f1f3f5;
@@ -29,7 +30,7 @@
 
     --color-light-up: #0ca678;
     --color-light-down: #d6336c;
-    --color-light-toggle-button-icon: #fcc419;
+    --color-light-toggle-button-icon: #868e96;
     --color-light-fleeca: ;
     --color-light-maze: ;
 
