feat: add toggle button hover state

--- a/src/assets/styles/components/toggle-button.css
+++ b/src/assets/styles/components/toggle-button.css
@@ -78,3 +78,15 @@
 .dark .toggle-button__handle {
     background-color: var(--color-dark-toggle-button-thumb);
 }
+
+.toggle-button__input:hover ~ .toggle-button__icon--moon {
+    color: var(--color-light-text);
+}
+
+.dark .toggle-button__input:hover ~ .toggle-button__icon--sun {
+    color: var(--color-dark-text);
+}
+
+.dark .toggle-button__input:hover ~ .toggle-button__icon--moon {
+    color: var(--color-dark-toggle-button-icon-active);
+}
