--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -13,7 +13,7 @@
     --color-dark-icon-bg-filled: ;
     --color-dark-toggle-button-track: #383D43;
     --color-dark-toggle-button-thumb: #CED4DA;
-    --color-dark-toggle-button-icon: #495057;
+    --color-dark-toggle-button-icon: #868E96;
     --color-dark-toggle-button-icon-active: #fcc419;
 
     --color-light-screen: #ffffff;
