--- a/src/assets/styles/components/form.css
+++ b/src/assets/styles/components/form.css
@@ -72,7 +72,7 @@
 
 .form__input::placeholder {
     font-weight: 600;
-    color: var(--color-light-text-alt);
+    color: var(--color-light-text-placeholder);
 }
 
 .form__input:focus {
@@ -84,7 +84,7 @@
     margin: 2px 0 0 0;
     font-size: 12px;
     font-weight: 700;
-    color: var(--color-red);
+    color: var(--color-light-down);
     line-height: 16px;
 }
 
