--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -10,16 +10,38 @@
     --color-dark-scrollbar-track: #1A1B1E;
     --color-dark-scrollbar-thumb: #272B30;
     --color-dark-icon-bg: #272B30;
-    --color-dark-icon-bg-filled: ;
+    --color-dark-button-secondary: #272B30;
     --color-dark-toggle-button-track: #383D43;
     --color-dark-toggle-button-thumb: #CED4DA;
     --color-dark-toggle-button-icon: #868E96;
     --color-dark-toggle-button-icon-active: #fcc419;
     --color-dark-up: #0ca678;
-    --color-dark-down: #e64980;
+    --color-dark-down: #d6336c;
     --color-dark-fleeca: #37b24d;
     --color-dark-maze: #c92a2a;
 
+    --color-light-screen: #e9ecef;
+    --color-light-bg: #F3F5F6;
+    --color-light-fg: #ffffff;
+    --color-light-text: #495057;
+    --color-light-text-alt: #868e96;
+    --color-light-text-placeholder: #adb5bd;
+    --color-light-border: #e9ecef;
+    --color-light-border-on-bg: #dee2e6;
+    --color-light-scrollbar-track: #ced4da;
+    --color-light-scrollbar-thumb: #dee2e6;
+    --color-light-icon-bg: #f1f3f5;
+    --color-light-button-secondary: #E7EBEE;
+    --color-light-toggle-button-track: #dee2e6;
+    --color-light-toggle-button-thumb: #495057;
+    --color-light-toggle-button-icon: #868E96;
+    --color-light-toggle-button-icon-active: #fd7e14;
+    --color-light-up: #20c997;
+    --color-light-down: #f06595;
+    --color-light-fleeca: #51cf66;
+    --color-light-maze: #ff6b6b;
+
+    /*
     --color-light-screen: #ffffff;
     --color-light-bg: #f1f3f5;
     --color-light-fg: #ffffff;
@@ -37,6 +59,7 @@
     --color-light-toggle-button-icon: #868e96;
     --color-light-fleeca: ;
     --color-light-maze: ;
+    */
 }
 
 html {
