fix: fix toggle button track color

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -31,7 +31,7 @@
     --color-light-scrollbar-thumb: #dee2e6;
     --color-light-icon-bg: #f1f3f5;
     --color-light-button-secondary: #e9ecef;
-    --color-light-toggle-button-track: #dee2e6;
+    --color-light-toggle-button-track: #e9ecef;
     --color-light-toggle-button-icon: #9299A0;
     --color-light-toggle-button-icon-active: #f59f00;
     --color-light-up: #20c997;
