--- a/src/assets/styles/components/app.css
+++ b/src/assets/styles/components/app.css
@@ -25,8 +25,7 @@
     width: 72px;
     height: 72px;
     border-radius: 9999px;
-    border: 8px solid var(--color-light-spinner-track);
-    border-top: 8px solid var(--color-red);
+    border: 8px solid var(--color-light-toggle-button-track);
     animation: spin 2s linear infinite;
     margin: auto;
 }
@@ -53,4 +52,24 @@
 .dark .app {
     background-color: var(--color-dark-bg);
     border: 1px solid var(--color-dark-border-on-bg);
+}
+
+.maze .app__spinner {
+    border-top: 8px solid var(--color-light-maze);
+}
+
+.fleeca .app__spinner {
+    border-top: 8px solid var(--color-light-fleeca);
+}
+
+.dark .app__spinner {
+    border: 8px solid var(--color-dark-toggle-button-track);
+}
+
+.maze.dark .app__spinner {
+    border-top: 8px solid var(--color-dark-maze);
+}
+
+.fleeca.dark .app__spinner {
+    border-top: 8px solid var(--color-dark-fleeca);
 }
