--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -36,7 +36,7 @@
     --color-light-toggle-button-icon-active: #f59f00;
     --color-light-up: #20c997;
     --color-light-down: #f06595;
-    --color-light-fleeca: #51cf66;
+    --color-light-fleeca: #40c057;
     --color-light-maze: #ff6b6b;
 }
 
